--- a/backtester_logic/data_preparation.ipynb
+++ b/backtester_logic/data_preparation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +40,8 @@
     "        if item.endswith(\".txt\"):\n",
     "            os.remove(os.path.join(dir_path, item))\n",
     "\n",
-    "# csv_converter(\"nasdaq_stocks/\")\n",
-    "# csv_converter(\"nyse_stocks/\")"
+    "csv_converter(\"data/nasdaq_stocks/\")\n",
+    "# csv_converter(\"data/nyse_stocks/\")"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +81,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ticker                   Name\n",
+      "0   AACG.US  ATA CREATIVITY GLOBAL\n",
+      "1   AACI.US   ARMADA ACQUISITION I\n",
+      "2  AACIU.US   ARMADA ACQUISITION I\n",
+      "3  AACIW.US   ARMADA ACQUISITION I\n",
+      "4   AADI.US        AADI BIOSCIENCE\n",
+      "      Ticker                  Name\n",
+      "0       A.US  AGILENT TECHNOLOGIES\n",
+      "1      AA.US                 ALCOA\n",
+      "2   AAC-U.US      ARES ACQUISITION\n",
+      "3  AAC-WS.US      ARES ACQUISITION\n",
+      "4     AAC.US      ARES ACQUISITION\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "new_names = {'<TICKER>' : 'Ticker', '<NAME>' : 'Name'}\n",
@@ -100,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +171,7 @@
     "\n",
     "    for ticker in tickers.loc[:, 'Ticker']:\n",
     "        ticker_df = pd.read_csv(f'{file_path}{ticker.lower()}.csv')\n",
-    "        date = _int_to_datetime(ticker_df.loc[0, '<DATE>'])\n",
+    "        date = _int_to_datetime(ticker_df.loc[0, 'Date'])\n",
     "\n",
     "        if date < lowest_date:\n",
     "            lowest_date = date\n",
@@ -176,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,22 +204,22 @@
     "def normalize_dates(tickers, file_path):\n",
     "    for ticker in tickers.loc[:, 'Ticker']:\n",
     "        ticker_df = pd.read_csv(f'{file_path}{ticker.lower()}.csv')\n",
-    "        date = ticker_df.loc[0, '<DATE>']\n",
+    "        date = ticker_df.loc[0, 'Date']\n",
     "        \n",
-    "        date_idx = (ge_timeseries['<DATE>'] == date).idxmax() # This will be -2 from the excel csv! \n",
+    "        date_idx = (ge_timeseries['Date'] == date).idxmax() # This will be -2 from the excel csv! \n",
     "\n",
-    "        missing_dates = ge_timeseries.loc[:date_idx - 1, '<DATE>']\n",
+    "        missing_dates = ge_timeseries.loc[:date_idx - 1, 'Date']\n",
     "        insert_df = pd.DataFrame(columns=ge_timeseries.columns)\n",
-    "        insert_df['<DATE>'] = missing_dates\n",
-    "        insert_df['<TICKER>'] = ticker\n",
-    "        insert_df['<PER>'] = 'D'\n",
+    "        insert_df['Date'] = missing_dates\n",
+    "        insert_df['Ticker'] = ticker\n",
+    "        insert_df['Per'] = 'D'\n",
     "        insert_df = insert_df.fillna(-1)\n",
     "\n",
     "        normalized_df = pd.concat([insert_df, ticker_df], ignore_index=True)\n",
     "        normalized_df.to_csv(f'{file_path}{ticker.lower()}.csv', index=False)\n",
     "\n",
-    "# normalize_dates(nasdaq_tickers, 'nasdaq_stocks/')\n",
-    "# normalize_dates(nyse_tickers, 'nyse_stocks/')"
+    "# normalize_dates(nasdaq_tickers, 'data/nasdaq_stocks/')\n",
+    "# normalize_dates(nyse_tickers, 'data/nyse_stocks/')"
    ]
   },
   {
@@ -212,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,9 +245,8 @@
     "def push_table_to_db(tickers, file_path):\n",
     "\n",
     "    for ticker in tickers.loc[:, 'Ticker']:\n",
-    "        ticker_df = pd.read_csv(f'{file_path}{ticker.lower()}.csv').rename(\n",
-    "            columns=(lambda x : x[1 : -1].title())\n",
-    "        )\n",
+    "        ticker_df = pd.read_csv(f'{file_path}{ticker.lower()}.csv')\n",
+    "        \n",
     "        cursor.execute(\n",
     "            f'''CREATE TABLE {_ticker_to_table_name(ticker)} (\n",
     "                    Ticker text, \n",
@@ -246,20 +264,20 @@
     "\n",
     "        \n",
     "\n",
-    "# push_table_to_db(nasdaq_tickers, 'nasdaq_stocks/')\n",
-    "# push_table_to_db(nyse_tickers, 'nyse_stocks/')"
+    "# push_table_to_db(nasdaq_tickers, 'data/nasdaq_stocks/')\n",
+    "# push_table_to_db(nyse_tickers, 'data/nyse_stocks/')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's compute some initial parameters "
+    "Let's validate our data and make sure all dates are included. Once that is done, we can compute the parameters of the strategy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,171 +288,173 @@
     "\n",
     "universe = pd.concat([nasdaq_tickers, nyse_tickers], ignore_index=True)\n",
     "\n",
+    "# Start with the default parameters for the strategy as described by the book\n",
     "strategy = QuantitativeMomentum(\n",
     "    'data/MarketHistoricalData.db',\n",
     "    tickers=universe\n",
     ")\n",
     "\n",
-    "# strategy.compute_parameters() # Using default parameters, uploads everything to SQL \n"
+    "# tickers_missing_dates = strategy.validate_data()\n",
+    "\n",
+    "# assert tickers_missing_dates is []\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we can compute the parameters needed for our strategy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[] == []"
+    "# strategy.compute_parameters() # Using default parameters, uploads everything to SQL "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "query = f\"\"\"\n",
-    "        SELECT\n",
-    "        Return_{12}_Month,\n",
-    "        Percent_Positive_Over_{12}_Months, \n",
-    "        Percent_Negative_Over_{12}_Months,\n",
-    "        Open\n",
-    "        FROM {_ticker_to_table_name('WOLF.US')} \n",
-    "        WHERE Date >= {20081119}\n",
-    "        ORDER BY Date\n",
-    "        LIMIT 2\"\"\"\n",
-    "\n",
-    "return_value = cursor.execute(query).fetchall()\n",
-    "return_value[0][0]"
+    "Then we can finally see the results of our strategy "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "99708.82398910003\n"
+      "100%|██████████| 13258/13258 [1:34:29<00:00,  2.34it/s]    \n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Equity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19710104</td>\n",
+       "      <td>9.889687e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19710105</td>\n",
+       "      <td>9.990198e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19710106</td>\n",
+       "      <td>1.008420e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19710107</td>\n",
+       "      <td>1.016949e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19710108</td>\n",
+       "      <td>1.017269e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13253</th>\n",
+       "      <td>20230728</td>\n",
+       "      <td>3.377295e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13254</th>\n",
+       "      <td>20230731</td>\n",
+       "      <td>3.416764e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13255</th>\n",
+       "      <td>20230801</td>\n",
+       "      <td>3.376387e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13256</th>\n",
+       "      <td>20230802</td>\n",
+       "      <td>3.363874e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13257</th>\n",
+       "      <td>20230803</td>\n",
+       "      <td>3.366638e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13258 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[('MDT.US', 82, 24.280198),\n",
-       " ('UHT.US', 138, 14.467543),\n",
-       " ('JEQ.US', 637, 3.1388073000000003),\n",
-       " ('UPS.US', 55, 36.168806999999994),\n",
-       " ('FCBC.US', 113, 17.564001),\n",
-       " ('RTX.US', 97, 20.494415),\n",
-       " ('FC.US', 452, 4.4238),\n",
-       " ('RNR.US', 55, 36.152546),\n",
-       " ('POOL.US', 168, 11.854875000000002),\n",
-       " ('NRIM.US', 234, 8.5354191),\n",
-       " ('COKE.US', 58, 34.040434000000005),\n",
-       " ('CFFN.US', 232, 8.591605399999999),\n",
-       " ('CNP.US', 273, 7.3227323),\n",
-       " ('LUV.US', 245, 8.152922),\n",
-       " ('GUT.US', 939, 2.1284942),\n",
-       " ('JKHY.US', 143, 13.956987999999999),\n",
-       " ('WWW.US', 269, 7.4226415),\n",
-       " ('QCOM.US', 91, 21.974065),\n",
-       " ('NTCT.US', 311, 6.4135),\n",
-       " ('ES.US', 131, 15.232315),\n",
-       " ('LNT.US', 199, 10.037511299999998),\n",
-       " ('SPH.US', 208, 9.5755878),\n",
-       " ('FDX.US', 37, 53.822395),\n",
-       " ('PEP.US', 54, 36.736528),\n",
-       " ('FNB.US', 308, 6.4838061),\n",
-       " ('PZZA.US', 310, 6.4309225),\n",
-       " ('JPM.US', 99, 20.201515),\n",
-       " ('SHOO.US', 738, 2.7081736000000003),\n",
-       " ('NATI.US', 191, 10.463802000000001),\n",
-       " ('WAFD.US', 183, 10.902243),\n",
-       " ('ORLY.US', 88, 22.533099999999997),\n",
-       " ('ELS.US', 380, 5.252090900000001),\n",
-       " ('GRX.US', 916, 2.1813172),\n",
-       " ('LTBR.US', 7, 285.42600000000004),\n",
-       " ('BSRR.US', 167, 11.962137),\n",
-       " ('EBTC.US', 247, 8.066769),\n",
-       " ('CAG.US', 187, 10.661964),\n",
-       " ('CPA.US', 128, 15.55097),\n",
-       " ('CATY.US', 149, 13.406134),\n",
-       " ('PML.US', 475, 4.2086801000000005),\n",
-       " ('BDJ.US', 705, 2.8368374999999997),\n",
-       " ('EBS.US', 100, 19.9071),\n",
-       " ('JBLU.US', 443, 4.5046),\n",
-       " ('CLAR.US', 454, 4.4006104),\n",
-       " ('EL.US', 163, 12.262713),\n",
-       " ('HFWA.US', 221, 9.028794),\n",
-       " ('EG.US', 41, 48.214067),\n",
-       " ('GEO.US', 391, 5.107368),\n",
-       " ('CNOB.US', 299, 6.6775039000000005),\n",
-       " ('COHU.US', 234, 8.531066000000001)]"
+       "           Date        Equity\n",
+       "0      19710104  9.889687e+04\n",
+       "1      19710105  9.990198e+04\n",
+       "2      19710106  1.008420e+05\n",
+       "3      19710107  1.016949e+05\n",
+       "4      19710108  1.017269e+05\n",
+       "...         ...           ...\n",
+       "13253  20230728  3.377295e+07\n",
+       "13254  20230731  3.416764e+07\n",
+       "13255  20230801  3.376387e+07\n",
+       "13256  20230802  3.363874e+07\n",
+       "13257  20230803  3.366638e+07\n",
+       "\n",
+       "[13258 rows x 2 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import heapq\n",
-    "capital = 100_000\n",
-    "universe_size = len(universe)\n",
-    "generic_momentum_size = int(universe_size * 0.1)\n",
-    "generic_momentum_screen = []\n",
+    "from backtester import Backtester\n",
     "\n",
-    "def _fip_score(perc_return: float, perc_pos_days: float, perc_neg_days: float) -> float:\n",
-    "    return perc_return * (perc_pos_days - perc_neg_days)\n",
+    "backtester = Backtester(\n",
+    "    database=DATABASE_PATH,\n",
+    "    strategy=strategy\n",
+    ")\n",
     "\n",
-    "# Top 10% of generic momentum tickers\n",
-    "for ticker in universe['Ticker']:\n",
-    "    query = f\"\"\"SELECT \n",
-    "    Return_{12}_Month,\n",
-    "    Percent_Positive_Over_{12}_Months, \n",
-    "    Percent_Negative_Over_{12}_Months,\n",
-    "    Open\n",
-    "    FROM {_ticker_to_table_name(ticker)} \n",
-    "    WHERE Date >= {20081119}\n",
-    "    ORDER BY Date\n",
-    "    LIMIT 2\"\"\"\n",
-    "    return_value = cursor.execute(query).fetchall()\n",
-    "    if return_value == []:\n",
-    "        pass\n",
-    "    elif return_value[0][0] == -1:\n",
-    "        pass\n",
-    "    else:\n",
-    "        generic_momentum, perc_pos, perc_neg, _ = return_value[0]\n",
-    "        next_open = return_value[1][3]\n",
-    "        heapq.heappush(generic_momentum_screen,\n",
-    "                        (generic_momentum,\n",
-    "                        _fip_score(\n",
-    "                            generic_momentum, perc_pos, perc_neg),\n",
-    "                            next_open,\n",
-    "                            ticker))\n",
-    "        if len(generic_momentum_screen) > generic_momentum_size:\n",
-    "            heapq.heappop(generic_momentum_screen)\n",
-    "\n",
-    "# Choose top firms by fip_score next\n",
-    "top_firms = []\n",
-    "capital_available = (1/50) * capital\n",
-    "for generic_momentum, fip_score, next_open, ticker in generic_momentum_screen:\n",
-    "    shares_purchased = int( capital_available / (1.01 * next_open))\n",
-    "    if shares_purchased == 0:\n",
-    "        pass\n",
-    "    elif len(top_firms) < 50:\n",
-    "        heapq.heappush(top_firms, (fip_score, shares_purchased, 1.01 * next_open, ticker))\n",
-    "    else:\n",
-    "        heapq.heappushpop(top_firms, (fip_score, shares_purchased, 1.01 * next_open, ticker))\n",
-    "\n",
-    "arr = [(ticker, shares_purcahsed, close) for fip_score, shares_purcahsed, close, ticker in top_firms]\n",
-    "result = sum(item[1] * item[2] for item in arr)\n",
-    "print(result)\n",
-    "arr"
+    "equity_timeseries = backtester.backtest()\n",
+    "equity_timeseries\n",
+    "# 33666383.07106178"
    ]
   }
  ],
