Finished all but allowing user parameters and about me

--- a/backtester_logic/data_preparation.ipynb
+++ b/backtester_logic/data_preparation.ipynb
@@ -326,135 +326,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from backtester import Backtester\n",
+    "\n",
+    "backtester = Backtester(\n",
+    "    database=DATABASE_PATH\n",
+    ")\n",
+    "\n",
+    "# equity_timeseries = backtester.backtest(strategy)\n",
+    "# equity_timeseries\n",
+    "# 33666383.07106178"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Computing columns for different strategy variations\n",
+    "\n",
+    "# strategy = QuantitativeMomentum(\n",
+    "#     'data/MarketHistoricalData.db',\n",
+    "#     tickers=universe,\n",
+    "#     lottery_window=1,\n",
+    "#     look_back=1\n",
+    "# )\n",
+    "\n",
+    "# strategy.compute_parameters()\n",
+    "\n",
+    "# strategy = QuantitativeMomentum(\n",
+    "#     'data/MarketHistoricalData.db',\n",
+    "#     tickers=universe,\n",
+    "#     lottery_window=3,\n",
+    "#     look_back=60\n",
+    "# )\n",
+    "\n",
+    "# strategy.compute_parameters()\n",
+    "\n",
+    "# strategy = QuantitativeMomentum(\n",
+    "#     'data/MarketHistoricalData.db',\n",
+    "#     tickers=universe,\n",
+    "#     lottery_window=6,\n",
+    "#     look_back=36\n",
+    "# )\n",
+    "\n",
+    "# strategy.compute_parameters()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13258/13258 [1:34:29<00:00,  2.34it/s]    \n"
+      "100%|██████████| 13258/13258 [2:15:20<00:00,  1.63it/s]  \n",
+      "100%|██████████| 13258/13258 [3:47:09<00:00,  1.03s/it]  \n",
+      "100%|██████████| 13258/13258 [4:04:57<00:00,  1.11s/it]  \n",
+      "100%|██████████| 13258/13258 [4:38:17<00:00,  1.26s/it]  \n",
+      "100%|██████████| 13258/13258 [1:17:12<00:00,  2.86it/s]  \n",
+      "100%|██████████| 13258/13258 [1:21:39<00:00,  2.71it/s]  \n",
+      " 14%|█▍        | 1835/13258 [12:05<24:41,  7.71it/s]   "
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Equity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19710104</td>\n",
-       "      <td>9.889687e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19710105</td>\n",
-       "      <td>9.990198e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>19710106</td>\n",
-       "      <td>1.008420e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19710107</td>\n",
-       "      <td>1.016949e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>19710108</td>\n",
-       "      <td>1.017269e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13253</th>\n",
-       "      <td>20230728</td>\n",
-       "      <td>3.377295e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13254</th>\n",
-       "      <td>20230731</td>\n",
-       "      <td>3.416764e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13255</th>\n",
-       "      <td>20230801</td>\n",
-       "      <td>3.376387e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13256</th>\n",
-       "      <td>20230802</td>\n",
-       "      <td>3.363874e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13257</th>\n",
-       "      <td>20230803</td>\n",
-       "      <td>3.366638e+07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13258 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Date        Equity\n",
-       "0      19710104  9.889687e+04\n",
-       "1      19710105  9.990198e+04\n",
-       "2      19710106  1.008420e+05\n",
-       "3      19710107  1.016949e+05\n",
-       "4      19710108  1.017269e+05\n",
-       "...         ...           ...\n",
-       "13253  20230728  3.377295e+07\n",
-       "13254  20230731  3.416764e+07\n",
-       "13255  20230801  3.376387e+07\n",
-       "13256  20230802  3.363874e+07\n",
-       "13257  20230803  3.366638e+07\n",
-       "\n",
-       "[13258 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from backtester import Backtester\n",
+    "from utils import _strategy_table_convention\n",
+    "# Computing strategies \n",
     "\n",
-    "backtester = Backtester(\n",
-    "    database=DATABASE_PATH,\n",
-    "    strategy=strategy\n",
-    ")\n",
+    "for look_back in [12, 36, 60]:\n",
+    "    for lottery_window in [1, 3, 6, 9, 12]:\n",
+    "        for rebalance in [1, 3, 6, 9, 12]: \n",
+    "            for firms_held in [25, 50, 100, 200]:\n",
+    "                strategy = QuantitativeMomentum(\n",
+    "                    database_name='data/MarketHistoricalData.db',\n",
+    "                    tickers=universe,\n",
+    "                    look_back=look_back,\n",
+    "                    lottery_window=lottery_window,\n",
+    "                    firms_held=firms_held\n",
+    "                )\n",
     "\n",
-    "equity_timeseries = backtester.backtest()\n",
-    "equity_timeseries\n",
-    "# 33666383.07106178"
+    "                equity_timeseries = backtester.backtest(\n",
+    "                    strategy=strategy,\n",
+    "                    rebalance_period=rebalance\n",
+    "                )\n",
+    "\n",
+    "                equity_timeseries.to_sql(_strategy_table_convention(\n",
+    "                    look_back=look_back,\n",
+    "                    lottery_window=lottery_window,\n",
+    "                    rebalance=rebalance,\n",
+    "                    firms_held=firms_held\n",
+    "                ),\n",
+    "                                         conn,\n",
+    "                                         if_exists='replace',\n",
+    "                                         index=False)\n",
+    "\n",
+    "                "
    ]
   }
  ],
