--- a/backtester_logic/data_preparation.ipynb
+++ b/backtester_logic/data_preparation.ipynb
@@ -349,30 +349,30 @@
    "source": [
     "# Computing columns for different strategy variations\n",
     "\n",
-    "# strategy = QuantitativeMomentum(\n",
-    "#     'data/MarketHistoricalData.db',\n",
-    "#     tickers=universe,\n",
-    "#     lottery_window=1,\n",
-    "#     look_back=1\n",
-    "# )\n",
+    "strategy = QuantitativeMomentum(\n",
+    "    'data/MarketHistoricalData.db',\n",
+    "    tickers=universe,\n",
+    "    lottery_window=1,\n",
+    "    look_back=1\n",
+    ")\n",
     "\n",
     "# strategy.compute_parameters()\n",
     "\n",
-    "# strategy = QuantitativeMomentum(\n",
-    "#     'data/MarketHistoricalData.db',\n",
-    "#     tickers=universe,\n",
-    "#     lottery_window=3,\n",
-    "#     look_back=60\n",
-    "# )\n",
+    "strategy = QuantitativeMomentum(\n",
+    "    'data/MarketHistoricalData.db',\n",
+    "    tickers=universe,\n",
+    "    lottery_window=3,\n",
+    "    look_back=36\n",
+    ")\n",
     "\n",
     "# strategy.compute_parameters()\n",
     "\n",
-    "# strategy = QuantitativeMomentum(\n",
-    "#     'data/MarketHistoricalData.db',\n",
-    "#     tickers=universe,\n",
-    "#     lottery_window=6,\n",
-    "#     look_back=36\n",
-    "# )\n",
+    "strategy = QuantitativeMomentum(\n",
+    "    'data/MarketHistoricalData.db',\n",
+    "    tickers=universe,\n",
+    "    lottery_window=6,\n",
+    "    look_back=60\n",
+    ")\n",
     "\n",
     "# strategy.compute_parameters()\n"
    ]
@@ -381,74 +381,169 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for ticker in universe['Ticker']:\n",
+    "\n",
+    "#     try:\n",
+    "\n",
+    "#         ticker_df = pd.read_sql(f\"\"\"SELECT\n",
+    "#                                 Ticker, Per, Date, Time, Open, High, Low, Close, Vol, Openint \n",
+    "#                                 Percent_Positive_Over_1_Months,\n",
+    "#                                 Percent_Negative_Over_1_Months,\n",
+    "#                                 Percent_Positive_Over_3_Months,\n",
+    "#                                 Percent_Negative_Over_3_Months,\n",
+    "#                                 Percent_Positive_Over_6_Months_x,\n",
+    "#                                 Percent_Negative_Over_6_Months_x,\n",
+    "#                                 Percent_Positive_Over_12_Months,\n",
+    "#                                 Percent_Negative_Over_12_Months,\n",
+    "#                                 Return_12_Month,\n",
+    "#                                 Return_36_Month,\n",
+    "#                                 Return_60_Month\n",
+    "#                                 from {_ticker_to_table_name(ticker)}\n",
+    "#                                 \"\"\", conn)\n",
+    "        \n",
+    "#         new_columns = {'Percent_Positive_Over_6_Months_x' : 'Percent_Positive_Over_6_Months' , \n",
+    "#                        'Percent_Negative_Over_6_Months_x' : 'Percent_Negative_Over_6_Months'}\n",
+    "        \n",
+    "#         ticker_df = ticker_df.rename(columns=new_columns)  \n",
+    "        \n",
+    "#         ticker_df.to_sql(f'{_ticker_to_table_name(ticker)}' ,conn, if_exists='replace', index=False)\n",
+    "\n",
+    "#     except:\n",
+    "\n",
+    "#         ticker_df = pd.read_sql(f\"\"\"SELECT\n",
+    "#                                 Ticker, Per, Date, Time, Open, High, Low, Close, Vol, Openint \n",
+    "#                                 Percent_Positive_Over_1_Months_x,\n",
+    "#                                 Percent_Negative_Over_1_Months_x,\n",
+    "#                                 Percent_Positive_Over_3_Months,\n",
+    "#                                 Percent_Negative_Over_3_Months,\n",
+    "#                                 Percent_Positive_Over_6_Months_x,\n",
+    "#                                 Percent_Negative_Over_6_Months_x,\n",
+    "#                                 Percent_Positive_Over_12_Months,\n",
+    "#                                 Percent_Negative_Over_12_Months,\n",
+    "#                                 Return_12_Month,\n",
+    "#                                 Return_36_Month,\n",
+    "#                                 Return_60_Month\n",
+    "#                                 FROM {_ticker_to_table_name(ticker)}\n",
+    "#                                 \"\"\", conn)\n",
+    "        \n",
+    "#         new_columns = {'Percent_Positive_Over_6_Months_x' : 'Percent_Positive_Over_6_Months' , \n",
+    "#                        'Percent_Negative_Over_6_Months_x' : 'Percent_Negative_Over_6_Months',\n",
+    "#                        'Percent_Positive_Over_1_Months_x' : 'Percent_Positive_Over_1_Months',\n",
+    "#                         'Percent_Negative_Over_1_Months_x' : 'Percent_Negative_Over_1_Months' \n",
+    "#                        }\n",
+    "        \n",
+    "#         ticker_df = ticker_df.rename(columns=new_columns)    \n",
+    "\n",
+    "#         ticker_df.to_sql(f'{_ticker_to_table_name(ticker)}' ,conn, if_exists='replace', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13258/13258 [2:15:20<00:00,  1.63it/s]  \n",
-      "100%|██████████| 13258/13258 [3:47:09<00:00,  1.03s/it]  \n",
-      "100%|██████████| 13258/13258 [4:04:57<00:00,  1.11s/it]  \n",
-      "100%|██████████| 13258/13258 [4:38:17<00:00,  1.26s/it]  \n",
-      "100%|██████████| 13258/13258 [1:17:12<00:00,  2.86it/s]  \n",
-      "100%|██████████| 13258/13258 [1:21:39<00:00,  2.71it/s]  \n",
-      "100%|██████████| 13258/13258 [1:27:53<00:00,  2.51it/s]  \n",
-      "100%|██████████| 13258/13258 [1:35:49<00:00,  2.31it/s]  \n",
-      "100%|██████████| 13258/13258 [29:28<00:00,  7.50it/s] \n",
-      "100%|██████████| 13258/13258 [36:56<00:00,  5.98it/s]  \n",
-      "100%|██████████| 13258/13258 [50:42<00:00,  4.36it/s]  \n",
-      "100%|██████████| 13258/13258 [1:14:25<00:00,  2.97it/s]  \n",
-      "100%|██████████| 13258/13258 [22:29<00:00,  9.82it/s] \n",
-      "100%|██████████| 13258/13258 [29:51<00:00,  7.40it/s]  \n",
-      "100%|██████████| 13258/13258 [42:58<00:00,  5.14it/s]  \n",
-      "100%|██████████| 13258/13258 [1:06:31<00:00,  3.32it/s]  \n",
-      "100%|██████████| 13258/13258 [18:46<00:00, 11.77it/s] \n",
-      "100%|██████████| 13258/13258 [30:09<00:00,  7.33it/s]  \n",
-      "100%|██████████| 13258/13258 [1:14:24<00:00,  2.97it/s]  \n",
-      "100%|██████████| 13258/13258 [1:57:23<00:00,  1.88it/s]  \n",
-      "100%|██████████| 13258/13258 [3:51:51<00:00,  1.05s/it]  \n",
-      "100%|██████████| 13258/13258 [4:01:11<00:00,  1.09s/it]  \n",
-      "100%|██████████| 13258/13258 [3:39:17<00:00,  1.01it/s]  \n",
-      "100%|██████████| 13258/13258 [3:04:23<00:00,  1.20it/s]  \n",
-      "100%|██████████| 13258/13258 [50:39<00:00,  4.36it/s]  \n",
-      "100%|██████████| 13258/13258 [58:51<00:00,  3.75it/s]  \n",
-      "100%|██████████| 13258/13258 [1:12:32<00:00,  3.05it/s]  \n",
-      "100%|██████████| 13258/13258 [1:38:10<00:00,  2.25it/s]  \n",
-      "100%|██████████| 13258/13258 [30:13<00:00,  7.31it/s]  \n",
-      "100%|██████████| 13258/13258 [36:43<00:00,  6.02it/s]  \n",
-      "100%|██████████| 13258/13258 [49:21<00:00,  4.48it/s]  \n",
-      "100%|██████████| 13258/13258 [1:14:00<00:00,  2.99it/s]  \n",
-      "100%|██████████| 13258/13258 [23:02<00:00,  9.59it/s] \n",
-      "100%|██████████| 13258/13258 [30:51<00:00,  7.16it/s]  \n",
-      "100%|██████████| 13258/13258 [43:29<00:00,  5.08it/s]  \n",
-      "100%|██████████| 13258/13258 [1:11:02<00:00,  3.11it/s]  \n",
-      "100%|██████████| 13258/13258 [19:44<00:00, 11.19it/s] \n",
-      "100%|██████████| 13258/13258 [27:35<00:00,  8.01it/s]  \n",
-      "100%|██████████| 13258/13258 [39:14<00:00,  5.63it/s]  \n",
-      "100%|██████████| 13258/13258 [1:03:57<00:00,  3.45it/s]\n",
-      "100%|██████████| 13258/13258 [2:14:43<00:00,  1.64it/s]  \n",
-      "100%|██████████| 13258/13258 [3:32:43<00:00,  1.04it/s]  \n",
-      "100%|██████████| 13258/13258 [2:45:30<00:00,  1.34it/s]  \n",
-      "100%|██████████| 13258/13258 [2:46:09<00:00,  1.33it/s]  \n",
-      "100%|██████████| 13258/13258 [47:23<00:00,  4.66it/s] \n",
-      "100%|██████████| 13258/13258 [55:33<00:00,  3.98it/s]  \n",
-      "100%|██████████| 13258/13258 [1:09:26<00:00,  3.18it/s]  \n",
-      "100%|██████████| 13258/13258 [1:44:17<00:00,  2.12it/s]  \n",
-      "100%|██████████| 13258/13258 [30:31<00:00,  7.24it/s] \n",
-      "100%|██████████| 13258/13258 [35:18<00:00,  6.26it/s]  \n",
-      "100%|██████████| 13258/13258 [48:06<00:00,  4.59it/s]  \n",
-      "100%|██████████| 13258/13258 [1:11:08<00:00,  3.11it/s]  \n",
-      "100%|██████████| 13258/13258 [21:24<00:00, 10.32it/s] \n",
-      "100%|██████████| 13258/13258 [28:32<00:00,  7.74it/s]  \n",
-      "100%|██████████| 13258/13258 [41:36<00:00,  5.31it/s]  \n",
-      "100%|██████████| 13258/13258 [1:07:51<00:00,  3.26it/s]  \n",
-      "100%|██████████| 13258/13258 [18:06<00:00, 12.20it/s] \n",
-      "100%|██████████| 13258/13258 [25:23<00:00,  8.70it/s]  \n",
-      "100%|██████████| 13258/13258 [38:12<00:00,  5.78it/s]  \n",
-      "100%|██████████| 13258/13258 [1:01:43<00:00,  3.58it/s]\n",
-      "100%|██████████| 13258/13258 [2:03:01<00:00,  1.80it/s] \n",
-      "100%|██████████| 13258/13258 [2:38:07<00:00,  1.40it/s]  \n",
-      " 26%|██▌       | 3454/13258 [45:48<42:23,  3.85it/s]   "
+      "100%|██████████| 13258/13258 [3:57:46<00:00,  1.08s/it]  \n",
+      "100%|██████████| 13258/13258 [1:56:26<00:00,  1.90it/s]  \n",
+      "100%|██████████| 13258/13258 [1:58:26<00:00,  1.87it/s]  \n",
+      "100%|██████████| 13258/13258 [2:42:14<00:00,  1.36it/s]  \n",
+      "100%|██████████| 13258/13258 [42:14<00:00,  5.23it/s]  \n",
+      "100%|██████████| 13258/13258 [1:12:50<00:00,  3.03it/s]  \n",
+      "100%|██████████| 13258/13258 [55:49<00:00,  3.96it/s]  \n",
+      "100%|██████████| 13258/13258 [1:12:33<00:00,  3.05it/s]  \n",
+      "100%|██████████| 13258/13258 [22:49<00:00,  9.68it/s] \n",
+      "100%|██████████| 13258/13258 [28:28<00:00,  7.76it/s] \n",
+      "100%|██████████| 13258/13258 [38:20<00:00,  5.76it/s]  \n",
+      "100%|██████████| 13258/13258 [57:43<00:00,  3.83it/s]  \n",
+      "100%|██████████| 13258/13258 [14:34<00:00, 15.16it/s] \n",
+      "100%|██████████| 13258/13258 [20:16<00:00, 10.90it/s] \n",
+      "100%|██████████| 13258/13258 [30:34<00:00,  7.23it/s]  \n",
+      "100%|██████████| 13258/13258 [48:16<00:00,  4.58it/s]  \n",
+      "100%|██████████| 13258/13258 [1:41:38<00:00,  2.17it/s] \n",
+      "100%|██████████| 13258/13258 [1:48:01<00:00,  2.05it/s]  \n",
+      "100%|██████████| 13258/13258 [2:00:04<00:00,  1.84it/s]  \n",
+      "100%|██████████| 13258/13258 [2:20:57<00:00,  1.57it/s]  \n",
+      "100%|██████████| 13258/13258 [1:06:03<00:00,  3.34it/s]\n",
+      "100%|██████████| 13258/13258 [1:22:33<00:00,  2.68it/s]  \n",
+      "100%|██████████| 13258/13258 [1:40:39<00:00,  2.20it/s]  \n",
+      "100%|██████████| 13258/13258 [2:14:24<00:00,  1.64it/s]  \n",
+      "100%|██████████| 13258/13258 [24:43<00:00,  8.93it/s] \n",
+      "100%|██████████| 13258/13258 [28:38<00:00,  7.71it/s] \n",
+      "100%|██████████| 13258/13258 [38:56<00:00,  5.67it/s]  \n",
+      "100%|██████████| 13258/13258 [57:36<00:00,  3.84it/s]  \n",
+      "100%|██████████| 13258/13258 [14:46<00:00, 14.96it/s] \n",
+      "100%|██████████| 13258/13258 [20:33<00:00, 10.75it/s] \n",
+      "100%|██████████| 13258/13258 [31:03<00:00,  7.11it/s]  \n",
+      "100%|██████████| 13258/13258 [49:23<00:00,  4.47it/s]  \n",
+      "100%|██████████| 13258/13258 [1:41:38<00:00,  2.17it/s] \n",
+      "100%|██████████| 13258/13258 [1:51:44<00:00,  1.98it/s]  \n",
+      "100%|██████████| 13258/13258 [2:01:54<00:00,  1.81it/s]  \n",
+      "100%|██████████| 13258/13258 [2:19:54<00:00,  1.58it/s]  \n",
+      "100%|██████████| 13258/13258 [40:17<00:00,  5.48it/s] \n",
+      "100%|██████████| 13258/13258 [46:29<00:00,  4.75it/s]  \n",
+      "100%|██████████| 13258/13258 [58:52<00:00,  3.75it/s]  \n",
+      "100%|██████████| 13258/13258 [1:42:46<00:00,  2.15it/s]  \n",
+      "100%|██████████| 13258/13258 [24:42<00:00,  8.94it/s] \n",
+      "100%|██████████| 13258/13258 [33:30<00:00,  6.59it/s]  \n",
+      "100%|██████████| 13258/13258 [43:39<00:00,  5.06it/s]  \n",
+      "100%|██████████| 13258/13258 [1:02:02<00:00,  3.56it/s]\n",
+      "100%|██████████| 13258/13258 [15:57<00:00, 13.84it/s] \n",
+      "100%|██████████| 13258/13258 [22:17<00:00,  9.91it/s]  \n",
+      "100%|██████████| 13258/13258 [33:21<00:00,  6.63it/s]  \n",
+      "100%|██████████| 13258/13258 [1:23:07<00:00,  2.66it/s]  \n",
+      "100%|██████████| 13258/13258 [2:01:59<00:00,  1.81it/s] \n",
+      "100%|██████████| 13258/13258 [4:22:01<00:00,  1.19s/it]     \n",
+      "100%|██████████| 13258/13258 [2:23:54<00:00,  1.54it/s]  \n",
+      "100%|██████████| 13258/13258 [2:46:20<00:00,  1.33it/s]  \n",
+      "100%|██████████| 13258/13258 [46:57<00:00,  4.71it/s] \n",
+      "100%|██████████| 13258/13258 [54:45<00:00,  4.04it/s]  \n",
+      "100%|██████████| 13258/13258 [1:06:48<00:00,  3.31it/s]  \n",
+      "100%|██████████| 13258/13258 [1:29:32<00:00,  2.47it/s]  \n",
+      "100%|██████████| 13258/13258 [28:05<00:00,  7.86it/s] \n",
+      "100%|██████████| 13258/13258 [1:04:05<00:00,  3.45it/s]  \n",
+      "100%|██████████| 13258/13258 [1:27:43<00:00,  2.52it/s]  \n",
+      "100%|██████████| 13258/13258 [1:46:09<00:00,  2.08it/s]  \n",
+      "100%|██████████| 13258/13258 [33:44<00:00,  6.55it/s]  \n",
+      "100%|██████████| 13258/13258 [52:55<00:00,  4.18it/s]  \n",
+      "100%|██████████| 13258/13258 [56:58<00:00,  3.88it/s]  \n",
+      "100%|██████████| 13258/13258 [1:19:35<00:00,  2.78it/s]  \n",
+      "100%|██████████| 13258/13258 [3:24:55<00:00,  1.08it/s]  \n",
+      "100%|██████████| 13258/13258 [4:33:38<00:00,  1.24s/it]  \n",
+      "100%|██████████| 13258/13258 [4:48:06<00:00,  1.30s/it]  \n",
+      "100%|██████████| 13258/13258 [5:55:12<00:00,  1.61s/it]  \n",
+      "100%|██████████| 13258/13258 [2:27:15<00:00,  1.50it/s]  \n",
+      "100%|██████████| 13258/13258 [6:23:37<00:00,  1.74s/it]      \n",
+      "100%|██████████| 13258/13258 [2:23:38<00:00,  1.54it/s]  \n",
+      "100%|██████████| 13258/13258 [2:44:46<00:00,  1.34it/s]  \n",
+      "100%|██████████| 13258/13258 [55:08<00:00,  4.01it/s]  \n",
+      "100%|██████████| 13258/13258 [1:03:42<00:00,  3.47it/s]  \n",
+      "100%|██████████| 13258/13258 [1:24:45<00:00,  2.61it/s]  \n",
+      "100%|██████████| 13258/13258 [2:04:25<00:00,  1.78it/s]  \n",
+      "100%|██████████| 13258/13258 [32:20<00:00,  6.83it/s]  \n",
+      "100%|██████████| 13258/13258 [45:04<00:00,  4.90it/s]  \n",
+      "100%|██████████| 13258/13258 [1:25:00<00:00,  2.60it/s]  \n",
+      "100%|██████████| 13258/13258 [1:49:10<00:00,  2.02it/s]  \n",
+      "100%|██████████| 13258/13258 [2:46:55<00:00,  1.32it/s]  \n",
+      "100%|██████████| 13258/13258 [5:28:39<00:00,  1.49s/it]      \n",
+      "100%|██████████| 13258/13258 [3:12:05<00:00,  1.15it/s]  \n",
+      "100%|██████████| 13258/13258 [3:37:13<00:00,  1.02it/s]  \n",
+      "100%|██████████| 13258/13258 [1:01:01<00:00,  3.62it/s]\n",
+      "100%|██████████| 13258/13258 [1:10:03<00:00,  3.15it/s]  \n",
+      "100%|██████████| 13258/13258 [1:25:08<00:00,  2.60it/s]  \n",
+      "100%|██████████| 13258/13258 [1:53:06<00:00,  1.95it/s]  \n",
+      "100%|██████████| 13258/13258 [36:10<00:00,  6.11it/s]  \n",
+      "100%|██████████| 13258/13258 [44:45<00:00,  4.94it/s]  \n",
+      "100%|██████████| 13258/13258 [59:25<00:00,  3.72it/s]  \n",
+      "100%|██████████| 13258/13258 [1:27:15<00:00,  2.53it/s]  \n",
+      "100%|██████████| 13258/13258 [22:56<00:00,  9.63it/s]  \n",
+      "100%|██████████| 13258/13258 [35:03<00:00,  6.30it/s]  \n",
+      "100%|██████████| 13258/13258 [2:59:44<00:00,  1.23it/s]      \n",
+      " 97%|█████████▋| 12832/13258 [2:00:52<02:25,  2.92it/s]  "
      ]
     }
    ],
@@ -457,8 +552,8 @@
     "# Computing strategies \n",
     "\n",
     "for look_back in [12, 36, 60]:\n",
-    "    for lottery_window in [1, 3, 6, 9, 12]:\n",
-    "        for rebalance in [1, 3, 6, 9, 12]: \n",
+    "    for lottery_window in [1, 3, 6, 12]:\n",
+    "        for rebalance in [1, 3, 6, 12]: \n",
     "            for firms_held in [25, 50, 100, 200]:\n",
     "                strategy = QuantitativeMomentum(\n",
     "                    database_name='data/MarketHistoricalData.db',\n",
@@ -481,9 +576,7 @@
     "                ),\n",
     "                                         conn,\n",
     "                                         if_exists='replace',\n",
-    "                                         index=False)\n",
-    "\n",
-    "                "
+    "                                         index=False)"
    ]
   }
  ],
